<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/app_detail_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start|center_vertical"
        android:text="@string/back"
        android:textSize="18sp"
        android:background="@null"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/app_detail_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_detail_back"
        tools:src="@mipmap/ic_launcher" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/app_detail_icon"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toRightOf="@+id/app_detail_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_detail_icon"
        tools:text="微信" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_detail_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/app_version"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/app_detail_package_label"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_detail_icon"
        app:layout_constraintVertical_chainStyle="spread"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_detail_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/app_detail_version_label"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toRightOf="@+id/app_detail_version_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_detail_version_label"
        tools:text="2.2.2"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_detail_package_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/app_package_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/app_detail_size_label"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_detail_version_label"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_detail_package"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/app_detail_package_label"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toRightOf="@+id/app_detail_package_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_detail_package_label"
        tools:text="2.2.2"/>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_detail_size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/app_size"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/app_detail_install_label"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_detail_package_label"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_detail_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/app_detail_size_label"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toRightOf="@+id/app_detail_size_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_detail_size_label"
        tools:text="2.2.2"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_detail_install_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/app_install_time"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/app_detail_update_label"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_detail_size_label"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_detail_install"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/app_detail_install_label"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toRightOf="@+id/app_detail_install_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_detail_install_label"
        tools:text="2.2.2"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_detail_update_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/app_last_update_time"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/app_detail_uninstall"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_detail_install_label"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_detail_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/app_detail_update_label"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toRightOf="@+id/app_detail_update_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_detail_update_label"
        tools:text="2.2.2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/app_detail_uninstall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/app_uninstall"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>